--- a/apps/templates/_helpers/_header.html
+++ b/apps/templates/_helpers/_header.html
@@ -8,6 +8,16 @@
                 Home
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'base:about_us_page' %}">
+                About us
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'base:contacts_page' %}">
+                Contacts
+            </a>
+        </li>
         <li>
             <a href="{% url 'admin:index' %}">
                 Admin
